Checkin makes scrolling to anchors faster by attempting to scroll to the named element from the content sink's timer routine rather than waiting until page loading completes. b=58661 r=heikki@netscape.com sr=jst@netscape.com a=asa@mozilla.org